Updated the properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8888
 
+spring.application.name=a-bootiful-client
 spring.cloud.config.server.git.uri=${HOME}/git/c3ip-config-dev
+management.endpoints.web.exposure.include=*
 #spring.cloud.config.server.git.uri=https://github.com/rohith7/c3ip-config-dev/blob/master/a-bootiful-client.properties
